rafctor method to load messwerte